[gd_scene load_steps=31 format=2]

[ext_resource path="res://Characters/BlueKnight/BlueKnightIcon.png" type="Texture" id=1]
[ext_resource path="res://Characters/Knight/KnightIcon.png" type="Texture" id=2]
[ext_resource path="res://Characters/BlueKnight/Idle/Combat_Ready_Idle_blue.png" type="Texture" id=3]
[ext_resource path="res://Backgrounds/Castle/castle_background.png" type="Texture" id=4]
[ext_resource path="res://GameScenes/DialogueTrigger.gd" type="Script" id=5]
[ext_resource path="res://DialogueUI.gd" type="Script" id=6]
[ext_resource path="res://Characters/Knight/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://HUD/PlayerUI.tscn" type="PackedScene" id=8]
[ext_resource path="res://DialogueSystem/DialogueInterface.tscn" type="PackedScene" id=9]
[ext_resource path="res://GameScenes/SceneController.gd" type="Script" id=10]
[ext_resource path="res://Characters/ArabianWarrior/ArabicWarriorEnemy.tscn" type="PackedScene" id=11]
[ext_resource path="res://GameScenes/EnemyGenerator.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1117, 89 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 228.75, 178.5 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 660, 720 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 660, 0, 660, 720 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1320, 0, 660, 720 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1980, 0, 660, 720 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2640, 0, 660, 720 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 660, 720 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 660, 0, 660, 720 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1320, 0, 660, 720 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1980, 0, 660, 720 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2640, 0, 660, 720 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 335.5, 51 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 137.25, 344 )

[sub_resource type="Gradient" id=16]
colors = PoolColorArray( 0, 0, 0, 1, 0.580392, 0.54902, 0.54902, 0.678431 )

[sub_resource type="GradientTexture" id=17]
gradient = SubResource( 16 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "martin",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "rodrigo",
"speed": 5.0
} ]

[node name="TestScene" type="Node2D"]

[node name="Background" type="Sprite" parent="."]
position = Vector2( 960.5, 543 )
scale = Vector2( 1.87598, 1.05273 )
texture = ExtResource( 4 )

[node name="Ground" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2( 1087, 776 )
shape = SubResource( 1 )
one_way_collision = true

[node name="DialogueTrigger" type="Area2D" parent="."]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogueTrigger"]
position = Vector2( 881.25, 509.5 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="DialogueTrigger"]
position = Vector2( 882, 596 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 13 )
playing = true
flip_h = true

[node name="Player" parent="." groups=["Player"] instance=ExtResource( 7 )]
position = Vector2( 344, 556 )

[node name="AnimatedSprite" parent="Player" index="0"]
frame = 1

[node name="LeftWall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2( -51, 346.5 )
rotation = 1.5708
shape = SubResource( 14 )
one_way_collision = true

[node name="RightWall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2( 1905, 343 )
rotation = -1.5708
shape = SubResource( 14 )
one_way_collision = true

[node name="NextSceneTrigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextSceneTrigger"]
position = Vector2( 2063.75, 344 )
shape = SubResource( 15 )

[node name="PlayerUI" parent="." instance=ExtResource( 8 )]
margin_left = -1.0
margin_top = 2.0
margin_right = -1.0
margin_bottom = 2.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DialogUI" parent="CanvasLayer" instance=ExtResource( 9 )]
visible = false
script = ExtResource( 6 )
speaker_frames = {
"Martín Antolínez": "martin",
"Rodrigo Díaz de Vivar": "rodrigo"
}

[node name="DialogueBox" parent="CanvasLayer/DialogUI" index="0"]
margin_top = -380.0
margin_right = 481.0
margin_bottom = -30.0
rect_min_size = Vector2( 750, 350 )
dialogue_file = "res://Dialogues/dialogue_1.json"

[node name="DialogueBackground" type="Sprite" parent="CanvasLayer/DialogUI"]
position = Vector2( 960.5, 541.625 )
scale = Vector2( 0.937988, 1076.75 )
texture = SubResource( 17 )

[node name="SpeakerImage" type="AnimatedSprite" parent="CanvasLayer/DialogUI"]
position = Vector2( 580, 482 )
frames = SubResource( 18 )
animation = "martin"

[node name="Controller" type="Node" parent="."]
script = ExtResource( 10 )

[node name="EnemyGenerator" type="Node" parent="."]
script = ExtResource( 12 )
enemy_scene = ExtResource( 11 )

[node name="LeftGenerationPosition" type="Position2D" parent="EnemyGenerator"]
position = Vector2( -76, 592 )

[node name="RightGenerationPosition" type="Position2D" parent="EnemyGenerator"]
position = Vector2( 2000, 592 )

[node name="SpawnTimer" type="Timer" parent="EnemyGenerator"]
one_shot = true
autostart = true

[connection signal="body_entered" from="DialogueTrigger" to="Player" method="_on_DialogueTrigger_body_entered"]
[connection signal="dialog" from="Player" to="CanvasLayer/DialogUI" method="_on_Player_dialog"]
[connection signal="health_updated" from="Player" to="PlayerUI" method="_on_Player_health_updated"]
[connection signal="dialogue_ended" from="CanvasLayer/DialogUI/DialogueBox" to="Player" method="_on_DialogueBox_dialogue_ended"]
[connection signal="dialogue_ended" from="CanvasLayer/DialogUI/DialogueBox" to="CanvasLayer/DialogUI" method="_on_DialogueBox_dialogue_ended"]
[connection signal="speaker_changed" from="CanvasLayer/DialogUI/DialogueBox" to="CanvasLayer/DialogUI" method="_on_DialogueBox_speaker_changed"]
[connection signal="timeout" from="EnemyGenerator/SpawnTimer" to="EnemyGenerator" method="_on_SpawnTimer_timeout"]

[editable path="Player"]
[editable path="PlayerUI"]
[editable path="CanvasLayer/DialogUI"]
